basic sms notifications as well as an extra status in the orders has been implemented. I also implemented the ability to search users by regex or id. One returns a list and one returns a single user so maybe this wasn't a great design choice....
